--- a/.gitignore
+++ b/.gitignore
@@ -89,8 +89,6 @@ ENV/
 .ropeproject
 
 
-# Created by https://www.gitignore.io/api/pycharm
-
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
@@ -143,4 +141,5 @@ fabric.properties
 # .idea/misc.xml
 # *.ipr
 
-# End of https://www.gitignore.io/api/pycharm
+# SQLite
+*.sqlite3
