--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 Django==1.11b1
 djangorestframework==3.6.2
-pytz==2016.10
 factory-boy==2.8.1
+Faker==0.7.10
+mysqlclient==1.3.10
+python-dateutil==2.6.0
+pytz==2016.10
+six==1.10.0
