--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==1.11b1
 djangorestframework==3.6.2
+django-rest-framework-social-oauth2==1.0.5
 factory-boy==2.8.1
 Faker==0.7.10
 mysqlclient==1.3.10
