--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,20 +1,27 @@
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# Created by https://www.gitignore.io/api/angular
-
-### Angular ###
-## Angular ##
 # compiled output
 /dist
 /tmp
-/app/**/*.js
-/app/**/*.js.map
 
 # dependencies
 /node_modules
-/bower_components
 
 # IDEs and editors
 /.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
 # misc
 /.sass-cache
@@ -31,5 +38,4 @@ testem.log
 
 #System Files
 .DS_Store
-
-# End of https://www.gitignore.io/api/angular
+Thumbs.db
