--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,27 @@
-redis
+amqp==2.1.4
+billiard==3.5.0.2
+celery==4.0.2
+defusedxml==0.5.0
 Django==1.11b1
-djangorestframework==3.6.2
-django-rest-framework-social-oauth2==1.0.5
+django-braces==1.11.0
+django-celery-beat==1.0.1
 django-cors-headers==2.0.2
+django-oauth-toolkit==0.12.0
+django-rest-framework-social-oauth2==1.0.5
+djangorestframework==3.6.2
 factory-boy==2.8.1
 Faker==0.7.10
+kombu==4.0.2
 mysqlclient==1.3.10
+oauthlib==2.0.1
+PyJWT==1.4.2
 python-dateutil==2.6.0
+python3-openid==3.1.0
 pytz==2016.10
+redis==2.10.5
+requests==2.13.0
+requests-oauthlib==0.8.0
 six==1.10.0
+social-auth-app-django==1.1.0
+social-auth-core==1.2.0
+vine==1.1.3
